--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       .mybtns > button {
         margin-right: 10px;
       }
+
     </style>
   </head>
 
@@ -117,6 +118,17 @@
           placeholder="name@example.com"
         />
         <label for="floatingInput">Movie URL</label>
+      </div>
+      <div class="input-review">
+        <label class="input-group-text" for="inputGroupSelect01">Stars</label>
+        <select class="form-select" id="inputGroupSelect01">
+            <option selected>-- Select a rating --</option>
+            <option value="1">⭐</option>
+            <option value="2">⭐⭐</option>
+            <option value="3">⭐⭐⭐</option>
+            <option value="4">⭐⭐⭐⭐</option>
+            <option value="5">⭐⭐⭐⭐⭐</option>
+        </select>
       </div>
       <div class="form-floating">
         <textarea
